# procrank_procmem

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: armv7-toolchain.cmake
libpagemap/: pm_memusage.c
procrank/: procrank.c
release_/: procmem  procrank
